--- a/etc/billingstack/billingstack.conf.sample
+++ b/etc/billingstack/billingstack.conf.sample
@@ -30,7 +30,7 @@ rabbit_password=123456
 [service:api]
 # Address to bind the API server
 # api_host = 0.0.0.0
-api_listen = 0.0.0.0
+api_listen = '0.0.0.0'
 
 # Port the bind the API server to
 api_port = 9001
